--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -6,3 +6,6 @@ spring.datasource.password=1q2w3e4r!
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.datasource.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.MariaDBDialect
+
+#profile ??
+spring.profiles.include=aws
